# docs/swagger.json
@@ -197,11 +197,14 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/usersauth.jsonTokenErrorWrapper"
+                            "$ref": "#/definitions/usersauth.jsonTokenWrapper"
                         }
                     },
                     "404": {
-                        "description": "Not Found"
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/usersauth.jsonTokenErrorWrapper"
+                        }
                     }
                 }
             }
@@ -517,6 +520,14 @@
             "type": "object",
             "properties": {
                 "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "usersauth.jsonTokenWrapper": {
+            "type": "object",
+            "properties": {
+                "token": {
                     "type": "string"
                 }
             }
